remove hidden = true from core info file, fix fieldsets in tables issue, fix table sticky header z-index issue

--- a/adaptivetheme_admin/css/at-admin.css
+++ b/adaptivetheme_admin/css/at-admin.css
@@ -131,8 +131,8 @@ h1#page-title {
   padding-top:2em;
   background: #f9f9f9;
 }
-#blocks .odd,
-#blocks .even {
+#blocks tr.odd,
+#blocks tr.even {
   background: #fff;
 }
 #blocks td, 
@@ -545,6 +545,12 @@ table {
   border-color: silver;
   width: 100%;
 }
+table.sticky-header {
+  z-index: 10;
+}
+thead label {
+  padding: 0 10px;
+}
 tr.even,
 tr.odd {
   border-bottom: 0;
@@ -732,7 +738,7 @@ textarea,
 select {
   margin: .375em 0;
   border: 1px solid #ccc;
-  padding:1px;
+  padding: 1px;
 }
 input.text,
 input.title {
@@ -807,11 +813,11 @@ input.teaser-button {
   border: 1px solid #fff;
   color: #fff;
   cursor: pointer;
-  font-size: .94em;
+  font-size: 1em;
   font-weight: 700;
   margin: 3px 0;
   outline: 1px solid #9babb0;
-  padding: 2px;
+  padding: 2px 6px;
 }
 input[value~=Save],
 input[value~=Update],
@@ -880,7 +886,6 @@ fieldset {
 .fieldset-wrapper {
   padding: 0 15px;
 }
-
 fieldset fieldset {
   background: #f7f7f7;
 }
@@ -956,6 +961,16 @@ fieldset legend a:active {
 }
 html.js fieldset.collapsible .fieldset-legend {
   padding-left: 17px;
+}
+table fieldset,
+table legend {
+  background: transparent;
+  border: 0;
+}
+table legend {
+  font-weight: 700;
+  padding: 4px 15px;
+  text-transform: uppercase;
 }
 input.form-text:focus,
 input.text:focus,
@@ -1076,7 +1091,7 @@ ul.action-links {
   list-style: none;
 }
 ul.action-links li a {
-  background: url("images/add.png") no-repeat scroll 2px center #fff;
+  background: url("images/add.png") no-repeat 2px center transparent;
   color: #444;
   font-weight: 700;
   padding: 2px 10px 3px 20px;
