--- a/adaptivetheme_subtheme/css/tables.css
+++ b/adaptivetheme_subtheme/css/tables.css
@@ -12,6 +12,9 @@ table {
   padding: 0;
   width: 100%;
 }
+table.sticky-header {
+  z-index: 10;
+}
 table,
 td,
 th {
